# knn-vc

./: knnvc_demo.ipynb  pyproject.toml
data/: good_morning.m4a
